新增 周期性写入历史值

--- a/writer/命令行示例.md
+++ b/writer/命令行示例.md
@@ -30,6 +30,21 @@
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv 
 ```
 
+
+# 周期性写入历史点
+
+* 帮助文档
+```shell
+./rtdb_writer his_periodic_write --help
+```
+* 命令行示例
+```shell
+./rtdb_writer his_periodic_write  \
+    --plugin=../plugin_example/libcwrite_plugin.dylib \
+    --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
+    --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv 
+```
+
 # 极速写入实时点
 
 * 帮助文档
