--- a/writer/命令行示例.md
+++ b/writer/命令行示例.md
@@ -13,7 +13,8 @@
 ./rtdb_writer static_write \
   --plugin=../plugin_example/libcwrite_plugin.dylib \
   --static_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_STATIC_ANALOG.csv \
-  --static_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_STATIC_DIGITAL.csv 
+  --static_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_STATIC_DIGITAL.csv \
+  --crew_number=1
 ```
 
 # 极速写入历史点
@@ -27,7 +28,8 @@
 ./rtdb_writer his_fast_write \
     --plugin=../plugin_example/libcwrite_plugin.dylib \
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
-    --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv 
+    --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
+    --crew_number=1
 ```
 
 
@@ -42,7 +44,8 @@
 ./rtdb_writer his_periodic_write  \
     --plugin=../plugin_example/libcwrite_plugin.dylib \
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
-    --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv 
+    --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
+    --crew_number=1
 ```
 
 # 极速写入实时点
@@ -58,7 +61,8 @@
     --rt_fast_analog=../CSV20240614/1718350759143_REALTIME_FAST_ANALOG.csv \
     --rt_fast_digital=../CSV20240614/1718350759143_REALTIME_FAST_DIGITAL.csv \
     --rt_normal_analog=../CSV20240614/1718350759143_REALTIME_NORMAL_ANALOG.csv \
-    --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv
+    --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv \
+    --crew_number=1
 ```
 
 # 周期性写入实时点
@@ -74,7 +78,8 @@
     --rt_fast_analog=../CSV20240614/1718350759143_REALTIME_FAST_ANALOG.csv \
     --rt_fast_digital=../CSV20240614/1718350759143_REALTIME_FAST_DIGITAL.csv \
     --rt_normal_analog=../CSV20240614/1718350759143_REALTIME_NORMAL_ANALOG.csv \
-    --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv
+    --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv \
+    --crew_number=1
 ```
 
 # 备注
