--- a/writer/命令行示例.md
+++ b/writer/命令行示例.md
@@ -14,7 +14,7 @@
   --plugin=../plugin_example/libcwrite_plugin.dylib \
   --static_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_STATIC_ANALOG.csv \
   --static_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_STATIC_DIGITAL.csv \
-  --crew_number=1
+  --unit_number=1
 ```
 
 # 极速写入历史点
@@ -29,7 +29,7 @@
     --plugin=../plugin_example/libcwrite_plugin.dylib \
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
-    --crew_number=1
+    --unit_number=1
 ```
 
 
@@ -45,7 +45,7 @@
     --plugin=../plugin_example/libcwrite_plugin.dylib \
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
-    --crew_number=1
+    --unit_number=1
 ```
 
 # 极速写入实时点
@@ -62,7 +62,7 @@
     --rt_fast_digital=../CSV20240614/1718350759143_REALTIME_FAST_DIGITAL.csv \
     --rt_normal_analog=../CSV20240614/1718350759143_REALTIME_NORMAL_ANALOG.csv \
     --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv \
-    --crew_number=1
+    --unit_number=1
 ```
 
 # 周期性写入实时点
@@ -79,7 +79,7 @@
     --rt_fast_digital=../CSV20240614/1718350759143_REALTIME_FAST_DIGITAL.csv \
     --rt_normal_analog=../CSV20240614/1718350759143_REALTIME_NORMAL_ANALOG.csv \
     --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv \
-    --crew_number=1
+    --unit_number=1
 ```
 
 # 备注
