新增功能, 写入多个断面

--- a/writer/命令行示例.md
+++ b/writer/命令行示例.md
@@ -79,7 +79,8 @@
     --rt_fast_digital=../CSV20240614/1718350759143_REALTIME_FAST_DIGITAL.csv \
     --rt_normal_analog=../CSV20240614/1718350759143_REALTIME_NORMAL_ANALOG.csv \
     --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv \
-    --unit_number=1
+    --unit_number=1 \
+    --fast_cache=true
 ```
 
 # 备注
