--- a/writer/命令行示例.md
+++ b/writer/命令行示例.md
@@ -14,7 +14,8 @@
   --plugin=../plugin_example/libcwrite_plugin.dylib \
   --static_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_STATIC_ANALOG.csv \
   --static_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_STATIC_DIGITAL.csv \
-  --unit_number=1
+  --unit_number=1 \
+  --param=static_write
 ```
 
 # 极速写入历史点
@@ -29,7 +30,8 @@
     --plugin=../plugin_example/libcwrite_plugin.dylib \
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
-    --unit_number=1
+    --unit_number=1 \
+    --param=his_fast_write
 ```
 
 
@@ -45,7 +47,8 @@
     --plugin=../plugin_example/libcwrite_plugin.dylib \
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
-    --unit_number=1
+    --unit_number=1 \
+    --param=his_periodic_write
 ```
 
 # 极速写入实时点
@@ -62,7 +65,8 @@
     --rt_fast_digital=../CSV20240614/1718350759143_REALTIME_FAST_DIGITAL.csv \
     --rt_normal_analog=../CSV20240614/1718350759143_REALTIME_NORMAL_ANALOG.csv \
     --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv \
-    --unit_number=1
+    --unit_number=1 \
+    --param=rt_fast_write
 ```
 
 # 周期性写入实时点
@@ -80,7 +84,8 @@
     --rt_normal_analog=../CSV20240614/1718350759143_REALTIME_NORMAL_ANALOG.csv \
     --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv \
     --unit_number=1 \
-    --fast_cache=true
+    --fast_cache=true \
+    --param=rt_periodic_write
 ```
 
 # 备注
