修复bug, 当fast_cache为true时, 计算summary会报panic

--- a/writer/命令行示例.md
+++ b/writer/命令行示例.md
@@ -78,13 +78,13 @@
 ```shell
 ./rtdb_writer rt_periodic_write \
     --plugin=../plugin_example/libcwrite_plugin.dylib \
-    --overload_protection=true \
     --rt_fast_analog=../CSV20240614/1718350759143_REALTIME_FAST_ANALOG.csv \
     --rt_fast_digital=../CSV20240614/1718350759143_REALTIME_FAST_DIGITAL.csv \
     --rt_normal_analog=../CSV20240614/1718350759143_REALTIME_NORMAL_ANALOG.csv \
     --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv \
     --unit_number=1 \
-    --fast_cache=false \
+    --overload_protection=false \
+    --fast_cache=true \
     --param=rt_periodic_write
 ```
 
