summary panic bug

--- a/writer/命令行示例.md
+++ b/writer/命令行示例.md
@@ -84,7 +84,7 @@
     --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --overload_protection=false \
-    --fast_cache=true \
+    --fast_cache=false \
     --param=rt_periodic_write
 ```
 
