极速写入快采点, 3新增3种模式

--- a/writer/命令行示例.md
+++ b/writer/命令行示例.md
@@ -66,6 +66,7 @@
     --rt_normal_analog=../CSV20240614/1718350759143_REALTIME_NORMAL_ANALOG.csv \
     --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv \
     --unit_number=1 \
+    --mode=0 \
     --param=rt_fast_write
 ```
 
@@ -85,6 +86,7 @@
     --unit_number=1 \
     --overload_protection=false \
     --fast_cache=false \
+    --mode=0 \
     --param=rt_periodic_write
 ```
 
