--- a/writer/命令行示例.md
+++ b/writer/命令行示例.md
@@ -15,6 +15,7 @@
   --static_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_STATIC_ANALOG.csv \
   --static_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_STATIC_DIGITAL.csv \
   --unit_number=1 \
+  --is_fast=false \
   --param=static_write
 ```
 
