login返回值判定

--- a/writer/命令行示例.md
+++ b/writer/命令行示例.md
@@ -15,7 +15,7 @@
   --static_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_STATIC_ANALOG.csv \
   --static_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_STATIC_DIGITAL.csv \
   --unit_number=1 \
-  --is_fast=false \
+  --type=0 \
   --param=static_write
 ```
 
@@ -84,9 +84,9 @@
     --rt_fast_digital=../CSV20240614/1718350759143_REALTIME_FAST_DIGITAL.csv \
     --rt_normal_analog=../CSV20240614/1718350759143_REALTIME_NORMAL_ANALOG.csv \
     --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv \
-    --unit_number=1 \
-    --overload_protection=false \
-    --fast_cache=false \
+    --unit_number=2 \
+    --overload_protection=true \
+    --fast_cache=true \
     --mode=0 \
     --param=rt_periodic_write
 ```
