更新命令行示例

--- a/writer/命令行示例.md
+++ b/writer/命令行示例.md
@@ -26,6 +26,14 @@
 ./rtdb_writer his_fast_write --help
 ```
 * 命令行示例
+* 3.2 并发查询一段时间历史存储值 参测厂商自行编写脚本导入历史数据集
+* 3.3 并发查询一段时间等间隔插值 参测厂商自行编写脚本导入历史数据集
+* 3.4 并发查询一段时间历史统计值 参测厂商自行编写脚本导入历史数据集
+* 3.5 并发查询一段时间趋势曲线值 参测厂商自行编写脚本导入历史数据集
+* 3.6 并发查询多点历史断面数据 参测厂商自行编写脚本导入历史数据集
+* 3.7 数据压缩性能测试 参测厂商自行编写脚本导入历史数据集
+* 4.1 高并发读写混合性能测试 参测厂商自行编写脚本导入历史数据集
+* 5.7 多活能力 参测厂商自行编写脚本导入历史数据集
 ```shell
 ./rtdb_writer his_fast_write \
     --plugin=../plugin_example/libcwrite_plugin.dylib \
@@ -43,6 +51,7 @@
 ./rtdb_writer his_periodic_write --help
 ```
 * 命令行示例
+* 1.14 数据库健壮性测试 调用数据写入程序按历史数据的频率写入历史数据集
 ```shell
 ./rtdb_writer his_periodic_write  \
     --plugin=../plugin_example/libcwrite_plugin.dylib \
@@ -59,6 +68,9 @@
 ./rtdb_writer rt_fast_write --help
 ```
 * 命令行示例
+* 2.2 急速写入实时数据 调用数据写入程序急速写入实时数据集
+* 2.4 急速写入PI数据 调用数据写入程序急速写入实时数据集
+* 2.6 急速写入SOE数据 调用数据写入程序急速写入实时数据集
 ```shell
 ./rtdb_writer rt_fast_write \
     --plugin=../plugin_example/libcwrite_plugin.dylib \
@@ -77,6 +89,20 @@
 ./rtdb_writer rt_periodic_write --help
 ```
 * 命令行示例
+* 1.17 跨单向网闸传输 调用数据写入程序的接口按实时数据的频率写入实时数据集
+* 2.1 周期性写入实时数据 调用数据写入程序按实时数据的频率写入实时数据集
+* 2.3 周期性写入PI数据 调用数据写入程序按实时数据的频率写入实时数据集
+* 2.5 周期性写入SOE数据 调用数据写入程序按实时数据的频率写入实时数据集
+* 2.7 数据库实时性测试 调用数据写入程序按实时数据的频率写入实时数据集
+* 3.1 混合场景查询实时数据 调用数据写入程序的接口按实时数据的频率写入实时数据集
+* 3.7 数据压缩性能测试 调用数据写入程序的接口按实时数据的频率写入实时数据集
+* 4.1 高并发读写混合性能测试 调用数据写入程序的接口按实时数据的频率写入实时数据集
+* 5.1 节点故障 调用数据写入程序的接口按实时数据的频率写入实时数据集
+* 5.2 操作系统故障 调用数据写入程序的接口按实时数据的频率写入实时数据集
+* 5.3 数据库服务故障 调用数据写入程序的接口按实时数据的频率写入实时数据集
+* 5.4 过载保护 调用数据写入程序的接口按实时数据的频率写入实时数据集
+* 5.5 数据多副本能力 调用数据写入程序的接口按实时数据的频率写入实时数据集
+* 5.6 超大量数据处理 调用数据写入程序的接口按实时数据的频率写入实时数据集
 ```shell
 ./rtdb_writer rt_periodic_write \
     --plugin=../plugin_example/libcwrite_plugin.dylib \
