--- a/writer/命令行示例.md
+++ b/writer/命令行示例.md
@@ -40,6 +40,7 @@
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
+    --random_av=false \
     --param=his_fast_write
 ```
 
@@ -58,6 +59,7 @@
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
+    --random_av=false \
     --param=his_periodic_write
 ```
 
@@ -80,6 +82,7 @@
     --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --mode=0 \
+    --random_av=false \
     --param=rt_fast_write
 ```
 
@@ -114,6 +117,7 @@
     --overload_protection=true \
     --fast_cache=true \
     --mode=0 \
+    --random_av=false \
     --param=rt_periodic_write
 ```
 
