--- a/writer/章节示例.md
+++ b/writer/章节示例.md
@@ -6,8 +6,12 @@
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
+    --random_av=false \
     --param=his_periodic_write
 ```
+备注:
+机组数量1: --unit_number=1
+关闭随机AV值: --random_av=false
 
 # 1.17 跨单向网闸传输
 * 要求: 调用数据写入程序的接口按实时数据的频率写入实时数据集
@@ -22,12 +26,14 @@
     --overload_protection=false \
     --fast_cache=true \
     --mode=0 \
+    --random_av=false \
     --param=rt_periodic_write
 ```
 备注: 
 机组数量1: --unit_number=1
 关闭过载保护: --overload_protection=false
 开启快采点缓存: --fast_cache=true
+关闭随机AV值: --random_av=false
 写入模式0, 同时写入快采点和普通点: --mode=0
 
 # 2.1 周期性写入实时数据
@@ -43,12 +49,14 @@
     --overload_protection=false \
     --fast_cache=true \
     --mode=0 \
+    --random_av=false \
     --param=rt_periodic_write
 ```
 备注:
 机组数量1: --unit_number=1
 关闭过载保护: --overload_protection=false
 开启快采点缓存: --fast_cache=true
+关闭随机AV值: --random_av=false
 写入模式0, 同时写入快采点和普通点: --mode=0
 
 # 2.2 急速写入实时数据
@@ -62,10 +70,12 @@
     --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --mode=0 \
+    --random_av=false \
     --param=rt_fast_write
 ```
 备注:
 机组数量1: --unit_number=1
+关闭随机AV值: --random_av=false
 写入模式0, 同时写入快采点和普通点: --mode=0
 
 # 2.3 周期性写入PI数据
@@ -81,12 +91,14 @@
     --overload_protection=false \
     --fast_cache=true \
     --mode=2 \
+    --random_av=false \
     --param=rt_periodic_write
 ```
 备注:
 机组数量1: --unit_number=1
 关闭过载保护: --overload_protection=false
 开启快采点缓存: --fast_cache=true
+关闭随机AV值: --random_av=false
 写入模式2, 只写普通点: --mode=2
 
 # 2.4 急速写入PI数据
@@ -100,10 +112,12 @@
     --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --mode=2 \
+    --random_av=false \
     --param=rt_fast_write
 ```
 备注:
 机组数量1: --unit_number=1
+关闭随机AV值: --random_av=false
 写入模式2, 只写普通点: --mode=2
 
 # 2.5 周期性写入SOE数据
@@ -119,12 +133,14 @@
     --overload_protection=false \
     --fast_cache=true \
     --mode=1 \
+    --random_av=false \
     --param=rt_periodic_write
 ```
 备注:
 机组数量1: --unit_number=1
 关闭过载保护: --overload_protection=false
 开启快采点缓存: --fast_cache=true
+关闭随机AV值: --random_av=false
 写入模式2, 只写普通点: --mode=1
 
 # 2.6 急速写入SOE数据
@@ -138,10 +154,12 @@
     --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --mode=1 \
+    --random_av=false \
     --param=rt_fast_write
 ```
 备注:
 机组数量1: --unit_number=1
+关闭随机AV值: --random_av=false
 写入模式1, 只写快采点: --mode=1
 
 # 2.7 数据库实时性测试
@@ -157,12 +175,14 @@
     --overload_protection=false \
     --fast_cache=true \
     --mode=0 \
+    --random_av=false \
     --param=rt_periodic_write
 ```
 备注:
 机组数量1: --unit_number=1
 关闭过载保护: --overload_protection=false
 开启快采点缓存: --fast_cache=true
+关闭随机AV值: --random_av=false
 写入模式0, 同时写入快采点和普通点: --mode=0
 
 # 3.1 混合场景查询实时数据
@@ -178,12 +198,14 @@
     --overload_protection=false \
     --fast_cache=true \
     --mode=0 \
+    --random_av=false \
     --param=rt_periodic_write
 ```
 备注:
 机组数量1: --unit_number=1
 关闭过载保护: --overload_protection=false
 开启快采点缓存: --fast_cache=true
+关闭随机AV值: --random_av=false
 写入模式0, 同时写入快采点和普通点: --mode=0
 
 # 3.2 并发查询一段时间历史存储值
@@ -194,10 +216,12 @@
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
+    --random_av=false \
     --param=his_fast_write
 ```
 备注:
 机组数量1: --unit_number=1
+关闭随机AV值: --random_av=false
 
 # 3.3 并发查询一段时间等间隔插值
 * 要求: 参测厂商自行编写脚本导入历史数据集 (可选用写数器进行数据写入)
@@ -207,10 +231,12 @@
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
+    --random_av=false \
     --param=his_fast_write
 ```
 备注:
 机组数量1: --unit_number=1
+关闭随机AV值: --random_av=false
 
 # 3.4 并发查询一段时间历史统计值
 * 要求: 参测厂商自行编写脚本导入历史数据集 (可选用写数器进行数据写入)
@@ -220,10 +246,12 @@
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
+    --random_av=false \
     --param=his_fast_write
 ```
 备注:
 机组数量1: --unit_number=1
+关闭随机AV值: --random_av=false
 
 # 3.5 并发查询一段时间趋势曲线值
 * 要求: 参测厂商自行编写脚本导入历史数据集 (可选用写数器进行数据写入)
@@ -233,10 +261,12 @@
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
+    --random_av=false \
     --param=his_fast_write
 ```
 备注:
 机组数量1: --unit_number=1
+关闭随机AV值: --random_av=false
 
 # 3.6 并发查询多点历史断面数据
 * 要求: 参测厂商自行编写脚本导入历史数据集 (可选用写数器进行数据写入)
@@ -246,10 +276,12 @@
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
+    --random_av=false \
     --param=his_fast_write
 ```
 备注:
 机组数量1: --unit_number=1
+关闭随机AV值: --random_av=false
 
 # 3.7 并发查询多点历史断面数据
 * 要求1: 调用数据写入程序的接口按实时数据的频率写入实时数据集
@@ -264,12 +296,14 @@
     --overload_protection=false \
     --fast_cache=true \
     --mode=0 \
+    --random_av=false \
     --param=rt_periodic_write
 ```
 备注:
 机组数量1: --unit_number=1
 关闭过载保护: --overload_protection=false
 开启快采点缓存: --fast_cache=true
+关闭随机AV值: --random_av=false
 写入模式0, 同时写入快采点和普通点: --mode=0
 
 * 要求2: 参测厂商自行编写脚本导入历史数据集 (可选用写数器进行数据写入)
@@ -279,10 +313,12 @@
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
+    --random_av=false \
     --param=his_fast_write
 ```
 备注:
 机组数量1: --unit_number=1
+关闭随机AV值: --random_av=false
 
 # 4.1 高并发读写混合性能测试
 * 要求1: 调用数据写入程序的接口按实时数据的频率写入实时数据集
@@ -297,12 +333,14 @@
     --overload_protection=false \
     --fast_cache=true \
     --mode=0 \
+    --random_av=false \
     --param=rt_periodic_write
 ```
 备注:
 机组数量1: --unit_number=1
 关闭过载保护: --overload_protection=false
 开启快采点缓存: --fast_cache=true
+关闭随机AV值: --random_av=false
 写入模式0, 同时写入快采点和普通点: --mode=0
 
 * 要求2: 参测厂商自行编写脚本导入历史数据集 (可选用写数器进行数据写入)
@@ -312,10 +350,12 @@
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
+    --random_av=false \
     --param=his_fast_write
 ```
 备注:
 机组数量1: --unit_number=1
+关闭随机AV值: --random_av=false
 
 # 5.1 节点故障
 * 要求: 调用数据写入程序的接口按实时数据的频率写入实时数据集
@@ -330,12 +370,14 @@
     --overload_protection=false \
     --fast_cache=true \
     --mode=0 \
+    --random_av=false \
     --param=rt_periodic_write
 ```
 备注:
 机组数量1: --unit_number=1
 关闭过载保护: --overload_protection=false
 开启快采点缓存: --fast_cache=true
+关闭随机AV值: --random_av=false
 写入模式0, 同时写入快采点和普通点: --mode=0
 
 # 5.2 操作系统故障
@@ -351,12 +393,14 @@
     --overload_protection=false \
     --fast_cache=true \
     --mode=0 \
+    --random_av=false \
     --param=rt_periodic_write
 ```
 备注:
 机组数量1: --unit_number=1
 关闭过载保护: --overload_protection=false
 开启快采点缓存: --fast_cache=true
+关闭随机AV值: --random_av=false
 写入模式0, 同时写入快采点和普通点: --mode=0
 
 # 5.3 数据库服务故障
@@ -372,12 +416,14 @@
     --overload_protection=false \
     --fast_cache=true \
     --mode=0 \
+    --random_av=false \
     --param=rt_periodic_write
 ```
 备注:
 机组数量1: --unit_number=1
 关闭过载保护: --overload_protection=false
 开启快采点缓存: --fast_cache=true
+关闭随机AV值: --random_av=false
 写入模式0, 同时写入快采点和普通点: --mode=0
 
 # 5.4 过载保护
@@ -393,12 +439,14 @@
     --overload_protection=true \
     --fast_cache=true \
     --mode=0 \
+    --random_av=false \
     --param=rt_periodic_write
 ```
 备注:
 机组数量1: --unit_number=1
 开启过载保护: --overload_protection=true
 开启快采点缓存: --fast_cache=true
+关闭随机AV值: --random_av=false
 写入模式0, 同时写入快采点和普通点: --mode=0
 
 # 5.5 数据多副本能力
@@ -414,12 +462,14 @@
     --overload_protection=false \
     --fast_cache=true \
     --mode=0 \
+    --random_av=false \
     --param=rt_periodic_write
 ```
 备注:
 机组数量1: --unit_number=1
 关闭过载保护: --overload_protection=false
 开启快采点缓存: --fast_cache=true
+关闭随机AV值: --random_av=false
 写入模式0, 同时写入快采点和普通点: --mode=0
 
 # 5.6 超大量数据处理
@@ -435,12 +485,14 @@
     --overload_protection=false \
     --fast_cache=true \
     --mode=0 \
+    --random_av=true \
     --param=rt_periodic_write
 ```
 备注:
 机组数量10: --unit_number=10
 关闭过载保护: --overload_protection=false
 开启快采点缓存: --fast_cache=true
+开启随机AV值: --random_av=true
 写入模式0, 同时写入快采点和普通点: --mode=0
 
 # 5.7 多活能力
@@ -451,7 +503,9 @@
     --his_normal_analog=../CSV20240614/1718350759143_HISTORY_NORMAL_ANALOG.csv \
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
+    --random_av=false \
     --param=his_fast_write
 ```
 备注:
 机组数量1: --unit_number=1
+关闭随机AV值: --random_av=false
