--- a/writer/命令行示例.md
+++ b/writer/命令行示例.md
@@ -16,6 +16,7 @@
   --static_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_STATIC_DIGITAL.csv \
   --unit_number=1 \
   --type=0 \
+  --magic=10 \
   --param=static_write
 ```
 
@@ -41,6 +42,7 @@
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --random_av=false \
+    --magic=10 \
     --param=his_fast_write
 ```
 
@@ -60,6 +62,7 @@
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --random_av=false \
+    --magic=10 \
     --param=his_periodic_write
 ```
 
@@ -83,6 +86,7 @@
     --unit_number=1 \
     --mode=0 \
     --random_av=false \
+    --magic=10 \
     --param=rt_fast_write
 ```
 
@@ -118,6 +122,7 @@
     --fast_cache=true \
     --mode=0 \
     --random_av=false \
+    --magic=10 \
     --param=rt_periodic_write
 ```
 
