--- a/writer/章节示例.md
+++ b/writer/章节示例.md
@@ -7,6 +7,7 @@
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --random_av=false \
+    --magic=10 \
     --param=his_periodic_write
 ```
 备注:
@@ -27,6 +28,7 @@
     --fast_cache=true \
     --mode=0 \
     --random_av=false \
+    --magic=10 \
     --param=rt_periodic_write
 ```
 备注: 
@@ -50,6 +52,7 @@
     --fast_cache=true \
     --mode=0 \
     --random_av=false \
+    --magic=10 \
     --param=rt_periodic_write
 ```
 备注:
@@ -71,6 +74,7 @@
     --unit_number=1 \
     --mode=0 \
     --random_av=false \
+    --magic=10 \
     --param=rt_fast_write
 ```
 备注:
@@ -92,6 +96,7 @@
     --fast_cache=true \
     --mode=2 \
     --random_av=false \
+    --magic=10 \
     --param=rt_periodic_write
 ```
 备注:
@@ -113,6 +118,7 @@
     --unit_number=1 \
     --mode=2 \
     --random_av=false \
+    --magic=10 \
     --param=rt_fast_write
 ```
 备注:
@@ -134,6 +140,7 @@
     --fast_cache=true \
     --mode=1 \
     --random_av=false \
+    --magic=10 \
     --param=rt_periodic_write
 ```
 备注:
@@ -155,6 +162,7 @@
     --unit_number=1 \
     --mode=1 \
     --random_av=false \
+    --magic=10 \
     --param=rt_fast_write
 ```
 备注:
@@ -176,6 +184,7 @@
     --fast_cache=true \
     --mode=0 \
     --random_av=false \
+    --magic=10 \
     --param=rt_periodic_write
 ```
 备注:
@@ -199,6 +208,7 @@
     --fast_cache=true \
     --mode=0 \
     --random_av=false \
+    --magic=10 \
     --param=rt_periodic_write
 ```
 备注:
@@ -217,6 +227,7 @@
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --random_av=false \
+    --magic=10 \
     --param=his_fast_write
 ```
 备注:
@@ -232,6 +243,7 @@
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --random_av=false \
+    --magic=10 \
     --param=his_fast_write
 ```
 备注:
@@ -247,6 +259,7 @@
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --random_av=false \
+    --magic=10 \
     --param=his_fast_write
 ```
 备注:
@@ -262,6 +275,7 @@
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --random_av=false \
+    --magic=10 \
     --param=his_fast_write
 ```
 备注:
@@ -277,6 +291,7 @@
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --random_av=false \
+    --magic=10 \
     --param=his_fast_write
 ```
 备注:
@@ -297,6 +312,7 @@
     --fast_cache=true \
     --mode=0 \
     --random_av=false \
+    --magic=10 \
     --param=rt_periodic_write
 ```
 备注:
@@ -314,6 +330,7 @@
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --random_av=false \
+    --magic=10 \
     --param=his_fast_write
 ```
 备注:
@@ -334,6 +351,7 @@
     --fast_cache=true \
     --mode=0 \
     --random_av=false \
+    --magic=10 \
     --param=rt_periodic_write
 ```
 备注:
@@ -351,6 +369,7 @@
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --random_av=false \
+    --magic=10 \
     --param=his_fast_write
 ```
 备注:
@@ -371,6 +390,7 @@
     --fast_cache=true \
     --mode=0 \
     --random_av=false \
+    --magic=10 \
     --param=rt_periodic_write
 ```
 备注:
@@ -394,6 +414,7 @@
     --fast_cache=true \
     --mode=0 \
     --random_av=false \
+    --magic=10 \
     --param=rt_periodic_write
 ```
 备注:
@@ -417,6 +438,7 @@
     --fast_cache=true \
     --mode=0 \
     --random_av=false \
+    --magic=10 \
     --param=rt_periodic_write
 ```
 备注:
@@ -440,6 +462,7 @@
     --fast_cache=true \
     --mode=0 \
     --random_av=false \
+    --magic=10 \
     --param=rt_periodic_write
 ```
 备注:
@@ -463,6 +486,7 @@
     --fast_cache=true \
     --mode=0 \
     --random_av=false \
+    --magic=10 \
     --param=rt_periodic_write
 ```
 备注:
@@ -486,6 +510,7 @@
     --fast_cache=true \
     --mode=0 \
     --random_av=true \
+    --magic=10 \
     --param=rt_periodic_write
 ```
 备注:
@@ -504,6 +529,7 @@
     --his_normal_digital=../CSV20240614/1718350759143_HISTORY_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --random_av=false \
+    --magic=10 \
     --param=his_fast_write
 ```
 备注:
