新增parallel_writing, 支持快采集点和普通点并行写入

--- a/writer/章节示例.md
+++ b/writer/章节示例.md
@@ -75,12 +75,14 @@
     --mode=0 \
     --random_av=false \
     --magic=10 \
+    --parallel_writing=true \
     --param=rt_fast_write
 ```
 备注:
 机组数量1: --unit_number=1
 关闭随机AV值: --random_av=false
 写入模式0, 同时写入快采点和普通点: --mode=0
+快采点和普通点并行写入: --parallel_writing=true
 
 # 2.3 周期性写入PI数据
 * 要求: 调用数据写入程序按实时数据的频率写入实时数据集 (只写普通点)
@@ -163,6 +165,7 @@
     --mode=1 \
     --random_av=false \
     --magic=10 \
+    --parallel_writing=false \
     --param=rt_fast_write
 ```
 备注:
