更新章节示例

--- a/writer/章节示例.md
+++ b/writer/章节示例.md
@@ -184,7 +184,7 @@
     --rt_normal_digital=../CSV20240614/1718350759143_REALTIME_NORMAL_DIGITAL.csv \
     --unit_number=1 \
     --overload_protection=false \
-    --fast_cache=true \
+    --fast_cache=false \
     --mode=0 \
     --random_av=false \
     --magic=10 \
@@ -193,7 +193,7 @@
 备注:
 机组数量1: --unit_number=1
 关闭过载保护: --overload_protection=false
-开启快采点缓存: --fast_cache=true
+关闭快采点缓存: --fast_cache=false
 关闭随机AV值: --random_av=false
 写入模式0, 同时写入快采点和普通点: --mode=0
 
